Display existing story text to new users

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,11 @@
     <div id="app">
         <section id="story" class="story">
           <!-- This is where the story snippets will go -->
+          <% for (const message of messages) { %>
+            <span class="story__message"><%= message %></span>
+          <% } %>
         </section>
+
         <footer class="user-input">
           <form class="user-input__form" id="input-form">
               <input type="text" id="input-text" class="user-input__text" placeholder="Continue story here!"/>
