--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="/public/styles/main.css">
   </head>
   <body>
-    <section id="story" class="story">
-      <!-- This is where the story snippets will go -->
-      <% for (const message of messages) { %>
-        <span class="story__message"><%= message %></span>
-      <% } %>
+    <section class="story">
+      <div id="story" class="story__container">
+        <!-- This is where the story snippets will go -->
+        <% messages.forEach(function (message) { %>
+          <span class="story__message" tabindex="1"><%= message %></span>
+        <% }); %>
+      </div>
     </section>
 
     <footer class="user-input">
       <form class="user-input__form" id="input-form">
           <input type="text" id="input-text" class="user-input__text" placeholder="Continue story here!"/>
-          <button class="user-input__submit">Add to story</button>
+          <button class="user-input__submit">Add</button>
       </form>
       <small class="typing-notice" id="active-notice"><span class="typing-notice__number" id="active-authors"></span> authors are typing</small>
     </footer>
