fixed number of authors displayed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
           <input type="text" id="input-text" class="user-input__text" placeholder="Continue story here!"/>
           <button class="user-input__submit">Add</button>
       </form>
-      <small class="typing-notice" id="active-notice"><span class="typing-notice__number" id="active-authors"></span> authors are typing</small>
+      <small class="typing-notice" id="active-notice"><span class="typing-notice__number" id="active-authors"><%= areTyping %></span> authors are typing</small>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.5.0/socket.io.min.js" charset="utf-8"></script>
     <script src="public/scripts/app.js"></script>
