--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -17,12 +17,78 @@ body {
   font-family: 'Droid Serif', georgia, times, serif;
   color: #1d1e1e;
 }
+p, h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+}
 
 input, button {
   font-size: 19.2px;
   font-size: 1rem;
 }
+.logo {
+  font-size: 1.4em;
+  margin-bottom: 0;
+}
+.create {
+  background-color: #3b6e78;
+  color: #FFF;
+  padding: 0.3em;
+}
 
+.create__button {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  padding: 0.4em 0.7em;
+  background-color: #ca7607;
+  float: right;
+}
+.create__button:hover {
+  background-color: #a35206;
+}
+
+.category {
+  padding: 1em;
+}
+
+.category__list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.story-preview {
+  color: inherit;
+  text-decoration: none;
+  background-color: #FFF;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  border: 1px solid #DDD;
+  display: block;
+  margin-bottom: 1.3em;
+  padding: 1em;
+  transition: box-shadow 200ms ease-out,
+   transform 200ms ease-out;
+}
+.story-preview:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02);
+}
+
+.story-data {
+  background-color: #577479;
+  padding: 0.2em 1em;
+  margin: 0 -1em -1em;
+  color: #FFF;
+}
+
+.story-data__list {
+  list-style: none;
+  padding-left: 0;
+  font-size: 0.75em;
+}
+.story-data__item {
+  display: inline-block;
+  margin-right: 1.3em;
+}
 .story {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -114,5 +180,9 @@ input, button {
     background-color: #ca7607;
     color: white;
     font-size: 0.8em;
+    cursor: pointer;
   }
+.user-input__submit:hover {
+  background-color: #a35206;
+}
 
