--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,4 @@
 <%- include('partials/header'); %>
-<header class="create">
-  <a href="/story" id="start-story" class="create__button">Start a story</a>
-  <h1 class="logo">Story Collab!</h1>
-</header>
-<section class="category">
-  <h2 class="category__title">Open Stories</h2>
-  <ul class="category__list">
-    <% stories.forEach(function(story) { %>
-        <li class="category__item">
-          <a href="/story/<%= story.id %>" class="story-preview">
-            <h3 class="story-preview__title"><%= story.title %>&hellip;</h3>
-            <footer class="story-preview__footer story-data">
-              <ul class="story-data__list">
-                <li class="story-data__item">
-                  <bold class="story-data__type">Active Authors:</bold>
-                  <%= story.authors.length %>
-                </li>
-                <li class="story-data__item">
-                  <bold class="story-data__type">Time Created:</bold>
-                  <% const date = new Date(1477172179).toLocaleTimeString() %>
-                  <%= date %>
-                </li>
-              </ul>
-            </footer>
-          </a>
-        </li>
-    <% }); %>
-  </ul>
-</section>
+<div id="app"></div>
+<script src="/public/scripts/app.bundle.js" charset="utf-8"></script>
 <%- include('partials/footer'); %>
