--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1">
     <title>Story Collab!</title>
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/main.css">
